syntax = "proto3";

package ai;

option go_package = ".pkg/pb";

service AiService{
  rpc ProcessPhoto(ProcessPhotoRequest) returns (ProcessPhotoResponse);
  rpc ProcessFacecam(ProcessFacecamRequest) returns (ProcessFacecamResponse);
}

message ProcessPhotoRequest{
  string id = 1;
  string url = 2;
}

message ProcessPhotoResponse{
  int64 status = 1;
  string error = 2;
}

message ProcessFacecamRequest{
  string id = 1;
  string url = 2;
}

message ProcessFacecamResponse{
  int64 status = 1;
  string error = 2;
}